Add Dockerfile & Stable version for demo

--- a/microservices/actix_server/src/public/admin.html
+++ b/microservices/actix_server/src/public/admin.html
@@ -17,8 +17,8 @@
     <link href="/resources/2thr9/admin/keycloak/css/styles.css" rel="stylesheet" />
 
     <script type="text/javascript">
-        var authServerUrl = 'https://localhost:{WEB_PORT}';
-        var authUrl = 'https://localhost:{WEB_PORT}';
+        var authServerUrl = 'https://{WEB_ADDR}:{WEB_PORT}';
+        var authUrl = 'https://{WEB_ADDR}:{WEB_PORT}';
         var consoleBaseUrl = '/admin/master/console/';
         var resourceUrl = '/resources/2thr9/admin/keycloak';
         var masterRealm = 'master';
