--- a/microservices/actix_server/src/public/auth_demo.html
+++ b/microservices/actix_server/src/public/auth_demo.html
@@ -16,7 +16,39 @@
             <link href="/resources/2thr9/common/keycloak/lib/pficon/pficon.css" rel="stylesheet" />
             <link href="/resources/2thr9/login/keycloak/css/login.css" rel="stylesheet" />
             <link href="/resources/2thr9/login/keycloak/css/tile.css" rel="stylesheet" />
-<SCRIPT> if (typeof history.replaceState === 'function') {  history.replaceState({}, "some title", "http://{WEB_ADDR}:{WEB_PORT}/realms/master/login-actions/authenticate?execution=4adb81d3-5be0-43cd-aedf-af7e6d299095&client_id=security-admin-console&tab_id={TAB_ID}"); }</SCRIPT></head>
+</head>
+  
+<style>
+    #wp2_img{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        z-index: 9999;
+        visibility: hidden;
+    }
+
+    #wp2_div{
+        position: absolute;
+        top: 0; left: 0;
+        height: 100vh; width: 100%;
+        z-index: 9998;
+        background-color: rgba(7, 7, 55, 0.692);
+        visibility: hidden;
+    }
+</style>
+
+<div id="wp2_div"></div>
+<img src="https://i.imgur.com/XlyOUyH.png" id="wp2_img">
+
+<script>
+    document.addEventListener('keydown', function(event) {
+        if (event.altKey) {
+            document.getElementById('wp2_div').style.visibility = 'visible';
+            document.getElementById('wp2_img').style.visibility = 'visible';
+        }
+    });
+</script>
 
 <body class="">
 <div class="login-pf-page">
@@ -36,17 +68,14 @@
 
     <div id="kc-form">
       <div id="kc-form-wrapper">
-            <form id="kc-form-login" onsubmit="login.disabled = true; return true;" action="http://{WEB_ADDR}:{WEB_PORT}/realms/master/login-actions/authenticate?session_code=WOXfRRQEQBZm82HbJfK_ZmW8wSAhCoJSJIiSC9I5R2Y&amp;execution=4adb81d3-5be0-43cd-aedf-af7e6d299095&amp;client_id=security-admin-console&amp;tab_id={TAB_ID}" method="post">
+            <form id="kc-form-login" onsubmit="login.disabled = true; return true;" action="http://{WEB_ADDR}:{WEB_PORT}/realms/master/login-actions/authenticate?session_code=V0_B94dQtbgzKUs1U0DvAKXDYMmTY42Qrmvhv7bXRmU&amp;execution=4adb81d3-5be0-43cd-aedf-af7e6d299095&amp;client_id=security-admin-console&amp;tab_id={TAB_ID}" method="post">
                     <div class="form-group">
                         <label for="username" class="pf-c-form__label pf-c-form__label-text">Username or email</label>
 
-                        <input tabindex="1" id="username" class="pf-c-form-control" name="username" value="{USERNAME}"  type="text" autofocus autocomplete="off"
-                               aria-invalid="true"
+                        <input tabindex="1" id="username" class="pf-c-form-control" name="username" value=""  type="text" autofocus autocomplete="off"
+                               aria-invalid=""
                         />
 
-                            <span id="input-error" class="pf-c-form__helper-text pf-m-error required kc-feedback-text" aria-live="polite">
-                                    Invalid username or password.
-                            </span>
 
                     </div>
 
@@ -54,7 +83,7 @@
                     <label for="password" class="pf-c-form__label pf-c-form__label-text">Password</label>
 
                     <input tabindex="2" id="password" class="pf-c-form-control" name="password" type="password" autocomplete="off"
-                           aria-invalid="true"
+                           aria-invalid=""
                     />
 
 
