--- a/microservices/actix_server/src/public/auth_new.html
+++ b/microservices/actix_server/src/public/auth_new.html
@@ -45,7 +45,7 @@
 
     <div id="kc-form">
       <div id="kc-form-wrapper">
-            <form id="kc-form-login" onsubmit="login.disabled = true; return true;" action="http://localhost:8080/realms/master/login-actions/authenticate?session_code=kxCvZ-LQzqNcfXzVdHlpqVEhqPwo4fvDbRFyUxfBZmA&amp;execution=4adb81d3-5be0-43cd-aedf-af7e6d299095&amp;client_id=security-admin-console&amp;tab_id={TAB_ID}" method="post">
+            <form id="kc-form-login" onsubmit="login.disabled = true; return true;" action="http://{WEB_ADDR}:8080/realms/master/login-actions/authenticate?session_code=kxCvZ-LQzqNcfXzVdHlpqVEhqPwo4fvDbRFyUxfBZmA&amp;execution=4adb81d3-5be0-43cd-aedf-af7e6d299095&amp;client_id=security-admin-console&amp;tab_id={TAB_ID}" method="post">
                     <div class="form-group">
                         <label for="username" class="pf-c-form__label pf-c-form__label-text">Username or email</label>
 
