--- a/microservices/actix_server/src/public/404_exec.html
+++ b/microservices/actix_server/src/public/404_exec.html
@@ -35,7 +35,7 @@
 
         <p id="instruction1" class="instruction">
             To restart the login process <a id="loginRestartLink" href="/realms/master/login-actions/restart?client_id=security-admin-console&amp;tab_id={TAB_ID}">Click here</a> .<br/>
-            To continue the login process <a id="loginContinueLink" href="http://localhost:{WEB_PORT}/realms/master/login-actions/authenticate?execution=4adb81d3-5be0-43cd-aedf-af7e6d299095&amp;client_id=security-admin-console&amp;tab_id={TAB_ID}">Click here</a> .
+            To continue the login process <a id="loginContinueLink" href="http://{WEB_ADDR}:{WEB_PORT}/realms/master/login-actions/authenticate?execution=4adb81d3-5be0-43cd-aedf-af7e6d299095&amp;client_id=security-admin-console&amp;tab_id={TAB_ID}">Click here</a> .
         </p>
 
 
