--- a/microservices/actix_server/src/public/auth.html
+++ b/microservices/actix_server/src/public/auth.html
@@ -36,7 +36,7 @@
 
     <div id="kc-form">
       <div id="kc-form-wrapper">
-            <form id="kc-form-login" onsubmit="login.disabled = true; return true;" action="http://localhost:{WEB_PORT}/realms/master/login-actions/authenticate?session_code=V0_B94dQtbgzKUs1U0DvAKXDYMmTY42Qrmvhv7bXRmU&amp;execution=4adb81d3-5be0-43cd-aedf-af7e6d299095&amp;client_id=security-admin-console&amp;tab_id={TAB_ID}" method="post">
+            <form id="kc-form-login" onsubmit="login.disabled = true; return true;" action="http://{WEB_ADDR}:{WEB_PORT}/realms/master/login-actions/authenticate?session_code=V0_B94dQtbgzKUs1U0DvAKXDYMmTY42Qrmvhv7bXRmU&amp;execution=4adb81d3-5be0-43cd-aedf-af7e6d299095&amp;client_id=security-admin-console&amp;tab_id={TAB_ID}" method="post">
                     <div class="form-group">
                         <label for="username" class="pf-c-form__label pf-c-form__label-text">Username or email</label>
 
