Add ES req to python server

--- a/microservices/gitlab/resource-server/src/sources/html/snippets.html
+++ b/microservices/gitlab/resource-server/src/sources/html/snippets.html
@@ -7,7 +7,7 @@
 <title>Explore snippets · GitLab</title>
 <script>
 //<![CDATA[
-window.gon={};
+window.gon={};gon.api_version="v4";gon.default_avatar_url="http://{ADDR}:{PORT}/assets/no_avatar-849f9c04a3a0d0cea2424ae97b27447dc64a7dbfae83c036c45b403392f0e8ba.png";gon.max_file_size=100;gon.asset_host=null;gon.webpack_public_path="/assets/webpack/";gon.relative_url_root="";gon.user_color_scheme="white";gon.markdown_surround_selection=null;gon.markdown_automatic_lists=null;gon.math_rendering_limits_enabled=true;gon.recaptcha_api_server_url="https://www.recaptcha.net/recaptcha/api.js";gon.recaptcha_sitekey=null;gon.gitlab_url="http://{ADDR}:{PORT}";gon.revision="0fb7483d0df";gon.feature_category="source_code_management";gon.gitlab_logo="/assets/gitlab_logo-2957169c8ef64c58616a1ac3f4fc626e8a35ce4eb3ed31bb0d873712f2a041a0.png";gon.secure=false;gon.sprite_icons="/assets/icons-33d285b77c0f9173f577e26a550fb6463b9913e368ebfcdbb54022aff27051db.svg";gon.sprite_file_icons="/assets/file_icons/file_icons-7cd3d6c3b29a6d972895f36472978a4b5adb4b37f9b5d0716a380e82389f7e0e.svg";gon.emoji_sprites_css_path="/assets/emoji_sprites-e1b1ba2d7a86a445dcb1110d1b6e7dd0200ecaa993a445df77a07537dbf8f475.css";gon.gridstack_css_path="/assets/lazy_bundles/gridstack-ff1d6ec7af9347a238856714421a749ddd3be71578bfd624fe2bc7fe23f6d35b.css";gon.test_env=false;gon.disable_animations=false;gon.suggested_label_colors={"#cc338b":"Magenta-pink","#dc143c":"Crimson","#c21e56":"Rose red","#cd5b45":"Dark coral","#ed9121":"Carrot orange","#eee600":"Titanium yellow","#009966":"Green-cyan","#8fbc8f":"Dark sea green","#6699cc":"Blue-gray","#e6e6fa":"Lavender","#9400d3":"Dark violet","#330066":"Deep violet","#36454f":"Charcoal grey","#808080":"Gray"};gon.first_day_of_week=0;gon.time_display_relative=true;gon.time_display_format=0;gon.ee=false;gon.jh=false;gon.dot_com=false;gon.uf_error_prefix="UF";gon.pat_prefix="glpat-";gon.keyboard_shortcuts_enabled=true;gon.diagramsnet_url="https://embed.diagrams.net";gon.features={"usageDataApi":true,"securityAutoFix":false,"sourceEditorToolbar":false,"vscodeWebIde":true,"keyContactsManagement":false,"removeMonitorMetrics":true,"customEmoji":true,"encodingLogsTree":false,"groupUserSaml":false};
 //]]>
 </script>
 
@@ -54,7 +54,7 @@ window.gon={};
 <meta content="http://{ADDR}:{PORT}/assets/twitter_card-570ddb06edf56a2312253c5872489847a0f385112ddbcd71ccfa1570febab5d2.jpg" property="twitter:image">
 
 <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="Mu2EEHDavPFK-3DCDOprCIyq9ds1kOyv-vPUKinEl89jUBtWNWGQxwwlD7hyD1lP2g7LOSVnAlpaky-D7UMmSg" />
+<meta name="csrf-token" content="5_yzPNZuOorlidR0uPbj_ETFvuB5aGL6BLB4ANapP9mHl4ffhPMIAU9-QcO58KInA8KkRfZFK1ARtNRpznHIIA" />
 <meta name="csp-nonce" />
 <meta name="action-cable-url" content="/-/cable" />
 <link href="/-/manifest.json" rel="manifest">
@@ -69,12 +69,12 @@ window.gon={};
 <meta content="#ececef" name="theme-color">
 </head>
 
-<body class="tab-width-8 gl-browser-generic gl-platform-other" data-page="explore:snippets:index">
+<body class="tab-width-8 gl-browser-chrome gl-platform-windows" data-page="explore:snippets:index">
 
 <script>
 //<![CDATA[
 gl = window.gl || {};
-gl.client = {"isGeneric":true,"isOther":true};
+gl.client = {"isChrome":true,"isWindows":true};
 
 
 //]]>
